--- a/index.html
+++ b/index.html
@@ -77,31 +77,56 @@
                     <div class="meter-stats">
                         <div class="stat-row">
                             <span class="stat-label">OSINT & Reconnaissance</span>
-                            <span class="stat-value low">Shodan, Censys, Maltego</span>
+                            <div class="tool-tags">
+                                <span class="tool-tag">Shodan</span>
+                                <span class="tool-tag">Censys</span>
+                                <span class="tool-tag">Maltego</span>
+                                <span class="tool-tag">SpiderFoot</span>
+                            </div>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Vulnerability Assessment</span>
-                            <span class="stat-value low">Nessus, Burp Suite, Metasploit</span>
+                            <span class="stat-label">Vulnerability Research</span>
+                            <div class="tool-tags">
+                                <span class="tool-tag">Burp Suite</span>
+                                <span class="tool-tag">Metasploit</span>
+                                <span class="tool-tag">Nuclei</span>
+                            </div>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Threat Hunting & Analysis</span>
-                            <span class="stat-value low">Splunk, Wireshark, YARA</span>
+                            <span class="stat-label">Threat Detection & Analysis</span>
+                            <div class="tool-tags">
+                                <span class="tool-tag">Splunk</span>
+                                <span class="tool-tag">Wireshark</span>
+                                <span class="tool-tag">YARA</span>
+                                <span class="tool-tag">Snort</span>
+                            </div>
                         </div>
                         <div class="stat-row">
                             <span class="stat-label">Security Automation</span>
-                            <span class="stat-value low">Python, PowerShell, FastAPI</span>
+                            <div class="tool-tags">
+                                <span class="tool-tag">Python</span>
+                                <span class="tool-tag">PowerShell</span>
+                                <span class="tool-tag">Ansible</span>
+                            </div>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">Cloud Security</span>
-                            <span class="stat-value low">Azure, Entra ID, Defender</span>
+                            <span class="stat-label">Enterprise Security</span>
+                            <div class="tool-tags">
+                                <span class="tool-tag">Microsoft Defender</span>
+                                <span class="tool-tag">Entra ID</span>
+                                <span class="tool-tag">Intune</span>
+                            </div>
                         </div>
                         <div class="stat-row">
-                            <span class="stat-label">GRC & Compliance</span>
-                            <span class="stat-value low">NIST 800-53, HIPAA, ServiceNow</span>
+                            <span class="stat-label">GRC Frameworks</span>
+                            <div class="tool-tags">
+                                <span class="tool-tag">NIST 800-53</span>
+                                <span class="tool-tag">HIPAA</span>
+                                <span class="tool-tag">NYCRR 500</span>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
         </header>
 
         <!-- Quick Links -->
