--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </header>
 
         <!-- Quick Links -->
@@ -208,7 +209,6 @@
                 <a href="mailto:Samuel.frieman@spartans.ut.edu">Email</a>
                 <a href="https://www.linkedin.com/in/samuel-frieman-829857275/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                 <a href="https://github.com/SamFrieman" target="_blank" rel="noopener noreferrer">GitHub</a>
-                <a href="tel:+1856-673-6308">Phone: (856) 673-6308</a>
             </div>
             <div class="copyright">
                 © 2026 Samuel Frieman | Cybersecurity Professional
